# KodeKloudWebinars

./: .gitignore  .yamllint.yml  CLAUDE.md  LICENSE  PROJECT_STATE.md  README.md
NFCU-session-2/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  ENVIRONMENTS.md  Makefile  PROJECT_STATE.md  README.md  pyproject.toml
NFCU-session-2/.github/workflows/: ci.yml  session-2-deploy-challenger.yml  session-2-promote-challenger.yml  session-2-rollback.yml
NFCU-session-2/MLOps_Deployment_Workshop/: README.md
NFCU-session-2/MLOps_Deployment_Workshop/Session_1_Deployment_Pipelines/: README.md
NFCU-session-2/MLOps_Deployment_Workshop/Session_2_Shadow_Deployment/: LAB_GUIDE.md  README.md
NFCU-session-2/MLOps_Deployment_Workshop/Session_2_Shadow_Deployment/config/: promotion-criteria.yaml
NFCU-session-2/MLOps_Deployment_Workshop/Session_2_Shadow_Deployment/docs/: architecture.md  runbook-rollback.md  why-lambda-fanout.md
NFCU-session-2/MLOps_Deployment_Workshop/Session_2_Shadow_Deployment/lambdas/comparison/: README.md  criteria.py  handler.py
NFCU-session-2/MLOps_Deployment_Workshop/Session_2_Shadow_Deployment/lambdas/shadow-mirror/: README.md  handler.py  requirements.txt
NFCU-session-2/MLOps_Deployment_Workshop/Session_2_Shadow_Deployment/lambdas/traffic-generator/: README.md  handler.py  requirements.txt
NFCU-session-2/MLOps_Deployment_Workshop/Session_2_Shadow_Deployment/models/: README.md  _dataset.py  _train.py  inference.py  package_model.py  requirements.txt  train_challenger.py  train_champion.py  verify_agreement.py
NFCU-session-2/MLOps_Deployment_Workshop/Session_2_Shadow_Deployment/models/data/: disagreement_region.json
NFCU-session-2/MLOps_Deployment_Workshop/Session_2_Shadow_Deployment/scripts/: provision-attendee.sh  teardown-attendee.sh  trigger-traffic.sh  validate-session-2.sh  verify-endpoints.sh
NFCU-session-2/MLOps_Deployment_Workshop/Session_2_Shadow_Deployment/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
NFCU-session-2/MLOps_Deployment_Workshop/Session_2_Shadow_Deployment/terraform/modules/cloudwatch_dashboard/: main.tf  outputs.tf  variables.tf
NFCU-session-2/MLOps_Deployment_Workshop/Session_2_Shadow_Deployment/terraform/modules/comparison_lambda/: main.tf  outputs.tf  variables.tf
NFCU-session-2/MLOps_Deployment_Workshop/Session_2_Shadow_Deployment/terraform/modules/shadow_log_buckets/: main.tf  outputs.tf  variables.tf
NFCU-session-2/MLOps_Deployment_Workshop/Session_2_Shadow_Deployment/terraform/modules/shadow_mirror_lambda/: main.tf  outputs.tf  variables.tf
NFCU-session-2/MLOps_Deployment_Workshop/Session_2_Shadow_Deployment/terraform/modules/traffic_generator_lambda/: main.tf  outputs.tf  variables.tf
NFCU-session-2/MLOps_Deployment_Workshop/Session_2_Shadow_Deployment/tests/: conftest.py
NFCU-session-2/MLOps_Deployment_Workshop/Session_2_Shadow_Deployment/tests/lambdas/: test_comparison.py  test_criteria_cli.py  test_shadow_mirror.py  test_traffic_generator.py
NFCU-session-2/MLOps_Deployment_Workshop/Session_3_Monitoring_Drift/: README.md
NFCU-session-2/MLOps_Deployment_Workshop/Session_4_Kubernetes_Serving/: README.md
NFCU-session-2/openspec/: project.md
NFCU-session-2/openspec/changes/add-session-2-shadow-deployment-lab/: design.md  proposal.md  tasks.md
NFCU-session-2/openspec/changes/add-session-2-shadow-deployment-lab/specs/audit-trail/: spec.md
NFCU-session-2/scripts/: validate-local.sh
NFCU-session-2/shared/python/workshop_common/: __init__.py
NFCU-session-2/shared/terraform-modules/audit_trail/: README.md  main.tf  outputs.tf  variables.tf
NFCU-session-3/: .gitignore  ENVIRONMENTS.md  LAB_ASSISTANT_BRIEFING.md  LAB_GUIDE.md  OPENSPEC_CHANGE_monitoring.md  PROJECT_STATE.md  README.md  RUN_CONFIG.md  pyproject.toml  reference.parquet  resources.md
NFCU-session-3/.github/workflows/: nfcu-session-3-deploy-monitoring.yml
NFCU-session-3/infra/: .terraform.lock.hcl  outputs.tf  per-attendee.tf  variables.tf
NFCU-session-3/lambdas/drift-detector/: handler.py  psi.py  requirements.txt
NFCU-session-3/lambdas/drift-simulator/: handler.py  requirements.txt
NFCU-session-3/lambdas/evidently-runner/: Dockerfile  PIN_VERIFICATION.md  handler.py  requirements.txt
NFCU-session-3/lambdas/incident-simulator/: handler.py  requirements.txt
NFCU-session-3/lambdas/incident-simulator/scenarios/: __init__.py  concept_drift_confirmed.py  data_drift.py  feature_pipeline_broken.py  latency_degradation.py  prediction_drift_isolated.py
NFCU-session-3/lambdas/nannyml-runner/: Dockerfile  PIN_VERIFICATION.md  handler.py  requirements.txt
NFCU-session-3/monitoring/: alarms.tf  dashboard.json  variables.tf
NFCU-session-3/openspec/: project.md
NFCU-session-3/openspec/changes/monitoring/: design.md  proposal.md  tasks.md
NFCU-session-3/openspec/changes/monitoring/specs/drift-detection/: spec.md
NFCU-session-3/runbooks/: concept-drift-confirmed.md  data-drift.md  feature-pipeline-broken.md  latency-degradation.md  prediction-drift-isolated.md  runbook-template.md
NFCU-session-3/scripts/: build-baseline-model.py  capture-reference-distribution.py  restore-session2-endpoint.sh  verify-lab-readiness.sh
NFCU-session-3/shared/baseline-models/session-1-2-uci-adult/: README.md
NFCU-session-3/shared/fixtures/uci-adult/: README.md
NFCU-session-3/tests/: conftest.py  dry_run_results.md  scenario_dry_run.md  test_drift_detector.py  test_drift_simulator.py  test_evidently_handler.py  test_incident_simulator_round_robin.py  test_nannyml_handler.py  test_psi.py  timing_results.md
NFCU-session-4/predictors/tinyllama/: .dockerignore  Dockerfile  README.md  build.sh  distilgpt2-fallback.Dockerfile  health.py  push-to-ecr.sh  pyproject.toml  server.py  test-local.sh
(+178 files in other folders)
