# ABOUTME: Session-scoped Python project for NFCU Session 3 lab tooling and tests.
# ABOUTME: Targets the AWS Lambda Python 3.11 runtime; dev deps pinned for TDD.
[project]
name = "nfcu-session-3-monitoring"
version = "0.1.0"
description = "NFCU Session 3 — model monitoring, drift detection, and incident simulation lab"
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "boto3>=1.34",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pytest>=8.0",
    "moto[s3,cloudwatch,sagemaker]>=5.0",
    # Used by scripts/build-baseline-model.py to build the SageMaker artifact.
    "scikit-learn>=1.4",
    "joblib>=1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Lambda source dirs are added to sys.path by tests/conftest.py
addopts = "-q"
filterwarnings = ["error::DeprecationWarning:nfcu_session_3.*"]

[tool.setuptools]
# This is a lab/workshop project, not a distributable package.
py-modules = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
